@@ -18,6 +18,7 @@ import org.mockito.MockitoAnnotations;
 import org.skyscreamer.jsonassert.JSONAssert;
 import org.skyscreamer.jsonassert.JSONCompareMode;
 import org.slf4j.LoggerFactory;
+
 import org.springframework.http.MediaType;
 import org.springframework.jdbc.core.BeanPropertyRowMapper;
 import org.springframework.jdbc.core.JdbcTemplate;
@@ -74,6 +75,7 @@ import static com.google.common.collect.Lists.newArrayList;
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.Matchers.containsInAnyOrder;
+
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.emptyString;
 import static org.hamcrest.Matchers.equalTo;
@@ -183,7 +185,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     private static final String REFERENCE_2 = "1504259907353545";
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         MockitoAnnotations.openMocks(this);
 
         doReturn(authentication).when(securityContext).getAuthentication();
@@ -197,7 +199,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn409WhenPostCreateCaseAndNonUniqueReferenceOccursTwiceForCaseworker() throws Exception {
+    void shouldReturn409WhenPostCreateCaseAndNonUniqueReferenceOccursTwiceForCaseworker() throws Exception {
         when(uidService.generateUID()).thenReturn(REFERENCE);
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
         final JsonNode DATA = mapper.readTree("{}\n");
@@ -228,14 +230,14 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WithTTLWhenPostCreateCaseEventWithValidDataForCaseworker()
+    void shouldReturn201WithTTLWhenPostCreateCaseEventWithValidDataForCaseworker()
         throws Exception {
         shouldReturn201WithTTLWhenPostCreateCaseEventWithValidData("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WithTTLWhenPostCreateCaseEventWithValidDataForCitizen()
+    void shouldReturn201WithTTLWhenPostCreateCaseEventWithValidDataForCitizen()
         throws Exception {
         shouldReturn201WithTTLWhenPostCreateCaseEventWithValidData("citizens");
     }
@@ -308,7 +310,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn409WhenPostCreateCaseAndNonUniqueReferenceOccursTwiceForCitizen() throws Exception {
+    void shouldReturn409WhenPostCreateCaseAndNonUniqueReferenceOccursTwiceForCitizen() throws Exception {
         when(uidService.generateUID()).thenReturn(REFERENCE).thenReturn(REFERENCE).thenReturn(REFERENCE);
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
         final JsonNode DATA = mapper.readTree("{}\n");
@@ -338,7 +340,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn201WhenPostCreateCaseAndSameReferenceFirstTimeButRetryIsUniqueForCaseworker()
+    void shouldReturn201WhenPostCreateCaseAndSameReferenceFirstTimeButRetryIsUniqueForCaseworker()
         throws Exception {
         when(uidService.generateUID()).thenReturn(REFERENCE).thenReturn(REFERENCE).thenReturn(REFERENCE_2);
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
@@ -369,7 +371,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn201WhenPostCreateCaseAndSameReferenceFirstTimeButRetryIsUniqueForCitizen()
+    void shouldReturn201WhenPostCreateCaseAndSameReferenceFirstTimeButRetryIsUniqueForCitizen()
         throws Exception {
         when(uidService.generateUID()).thenReturn(REFERENCE).thenReturn(REFERENCE).thenReturn(REFERENCE_2);
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
@@ -400,7 +402,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn201WhenPostCreateCaseWithEmptyDataClassificationForCaseworker() throws Exception {
+    void shouldReturn201WhenPostCreateCaseWithEmptyDataClassificationForCaseworker() throws Exception {
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
         final JsonNode DATA = mapper.readTree(
             "{\n" +
@@ -515,25 +517,26 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
         assertEquals(savedCaseDetails.getDataClassification(), caseAuditEvent.getDataClassification());
         assertThat(caseAuditEvent.getSecurityClassification(), equalTo(PRIVATE));
 
-        assertThat(messageQueueList.get(0).getMessageInformation().findPath("CaseId").toString(),
+        assertThat(messageQueueList.getFirst().getMessageInformation().findPath("CaseId").toString(),
             containsString(savedCaseDetails.getId()));
-        assertThat(messageQueueList.get(0).getMessageInformation().findPath("UserId").toString(),
+        assertThat(messageQueueList.getFirst().getMessageInformation().findPath("UserId").toString(),
             containsString(caseAuditEvent.getUserId()));
-        assertThat(messageQueueList.get(0).getMessageInformation().findPath("EventId").toString(),
+        assertThat(messageQueueList.getFirst().getMessageInformation().findPath("EventId").toString(),
             containsString(caseAuditEvent.getEventId()));
-        assertThat(messageQueueList.get(0).getMessageInformation().findPath("CaseTypeId").toString(),
+        assertThat(messageQueueList.getFirst().getMessageInformation().findPath("CaseTypeId").toString(),
             containsString(savedCaseDetails.getCaseTypeId()));
-        assertThat(messageQueueList.get(0).getMessageInformation().findPath("NewStateId").toString(),
+        assertThat(messageQueueList.getFirst().getMessageInformation().findPath("NewStateId").toString(),
             containsString(savedCaseDetails.getState()));
-        assertThat(messageQueueList.get(0).getMessageInformation().findPath("EventInstanceId").toString(),
+        assertThat(messageQueueList.getFirst().getMessageInformation().findPath("EventInstanceId").toString(),
             containsString(caseAuditEvent.getId().toString()));
-        assertEquals("null", messageQueueList.get(0).getMessageInformation().findPath("PreviousStateId").toString());
-        assertThat(messageQueueList.get(0).getId(), equalTo(1L));
-        assertEquals("CASE_EVENT", messageQueueList.get(0).getMessageType());
+        assertEquals("null", messageQueueList.getFirst().getMessageInformation()
+            .findPath("PreviousStateId").toString());
+        assertThat(messageQueueList.getFirst().getId(), equalTo(1L));
+        assertEquals("CASE_EVENT", messageQueueList.getFirst().getMessageType());
     }
 
     @Test
-    public void shouldGenerateCaseEventMessagingDefinition() throws Exception {
+    void shouldGenerateCaseEventMessagingDefinition() throws Exception {
         String caseType = "MessagePublishing";
         String eventId = "CREATE";
         String url = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + caseType + "/cases";
@@ -589,7 +592,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
             template.query("SELECT * FROM message_queue_candidates", this::mapMessageCandidate);
         assertEquals("Incorrect number of rows in messageQueue", 1, messageQueueList.size());
 
-        assertEquals(messageQueueList.get(0).getMessageInformation().get("AdditionalData").get("Definition"),
+        assertEquals(messageQueueList.getFirst().getMessageInformation().get("AdditionalData").get("Definition"),
             mapper.readTree("{\n"
                 + "    \"OtherAlias\": {\n"
                 + "        \"type\": \"SimpleNumber\",\n"
@@ -787,7 +790,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldGenerateCaseEventDataMessagingDefinition() throws Exception {
+    void shouldGenerateCaseEventDataMessagingDefinition() throws Exception {
         String caseType = "MessagePublishing";
         String eventId = "CREATE";
         String url = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + caseType + "/cases";
@@ -898,11 +901,11 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
                 + "  \"AliasForTextField\": \"text field\",\n"
                 + "  \"ComplexCollectionField\": null\n"
                 + "}"),
-            messageQueueList.get(0).getMessageInformation().get("AdditionalData").get("Data"));
+            messageQueueList.getFirst().getMessageInformation().get("AdditionalData").get("Data"));
     }
 
     @Test
-    public void shouldReturn201WhenPostCreateCaseWithEmptyDataClassificationForCitizen() throws Exception {
+    void shouldReturn201WhenPostCreateCaseWithEmptyDataClassificationForCitizen() throws Exception {
 
         final String URL =
             "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases?ignore-warning=true";
@@ -957,12 +960,13 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
         Map expectedSanitizedData = mapper.readValue(sanitizedData.toString(), Map.class);
         Map actualData = mapper.readValue(mapper.readTree(mvcResult.getResponse().getContentAsString())
             .get("case_data").toString(), Map.class);
+
         assertTrue("Incorrect Response Content", expectedSanitizedData.entrySet().containsAll(actualData.entrySet()));
 
         final List<CaseDetails> caseDetailsList = template.query("SELECT * FROM case_data", this::mapCaseData);
         assertEquals("Incorrect number of cases", 1, caseDetailsList.size());
 
-        final CaseDetails savedCaseDetails = caseDetailsList.get(0);
+        final CaseDetails savedCaseDetails = caseDetailsList.getFirst();
         assertTrue("Incorrect Case Reference", uidService.validateUID(String.valueOf(savedCaseDetails
             .getReference())));
         assertEquals("Incorrect Case Type", CASE_TYPE, savedCaseDetails.getCaseTypeId());
@@ -988,7 +992,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
         final List<AuditEvent> caseAuditEventList = template.query("SELECT * FROM case_event", this::mapAuditEvent);
         assertEquals("Incorrect number of case events", 1, caseAuditEventList.size());
 
-        final AuditEvent caseAuditEvent = caseAuditEventList.get(0);
+        final AuditEvent caseAuditEvent = caseAuditEventList.getFirst();
         assertEquals("123", caseAuditEvent.getUserId());
         assertEquals(savedCaseDetails.getId(), caseAuditEvent.getCaseDataId());
         assertEquals(savedCaseDetails.getCaseTypeId(), caseAuditEvent.getCaseTypeId());
@@ -1005,7 +1009,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn201WithSearchCriteriaWhenPostCreateCaseForCitizen() throws Exception {
+    void shouldReturn201WithSearchCriteriaWhenPostCreateCaseForCitizen() throws Exception {
 
         final String URL =
             "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/"
@@ -1036,7 +1040,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn422WhenPostCreateCaseWithMissingDocumentBinaryLinkForCaseworker() throws Exception {
+    void shouldReturn422WhenPostCreateCaseWithMissingDocumentBinaryLinkForCaseworker() throws Exception {
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
         final JsonNode DATA = mapper.readTree(
             "{\n"
@@ -1073,7 +1077,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn422WhenPostCreateCaseWithMissingDocumentBinaryLinkForCitizen() throws Exception {
+    void shouldReturn422WhenPostCreateCaseWithMissingDocumentBinaryLinkForCitizen() throws Exception {
 
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases?ignore-warning=true";
@@ -1114,7 +1118,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
 
     @Test
-    public void shouldReturn422WhenPostCreateCaseWithInvalidDocumentUrlDomainForCaseworker() throws Exception {
+    void shouldReturn422WhenPostCreateCaseWithInvalidDocumentUrlDomainForCaseworker() throws Exception {
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
         final JsonNode DATA = mapper.readTree(
             "{\n" +
@@ -1151,7 +1155,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn422WhenPostCreateCaseWithInvalidDocumentUrlDomainForCitizen() throws Exception {
+    void shouldReturn422WhenPostCreateCaseWithInvalidDocumentUrlDomainForCitizen() throws Exception {
 
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases?ignore-warning=true";
@@ -1186,7 +1190,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn201WhenPostCreateCaseWithNoDataForCaseworker() throws Exception {
+    void shouldReturn201WhenPostCreateCaseWithNoDataForCaseworker() throws Exception {
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
 
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
@@ -1216,7 +1220,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
         final List<AuditEvent> caseAuditEventList = template.query("SELECT * FROM case_event", this::mapAuditEvent);
         assertEquals("Incorrect number of case events", 1, caseAuditEventList.size());
 
-        final AuditEvent caseAuditEvent = caseAuditEventList.get(0);
+        final AuditEvent caseAuditEvent = caseAuditEventList.getFirst();
         assertEquals("123", caseAuditEvent.getUserId());
         assertEquals(savedCaseDetails.getId(), caseAuditEvent.getCaseDataId());
         assertEquals(savedCaseDetails.getCaseTypeId(), caseAuditEvent.getCaseTypeId());
@@ -1233,7 +1237,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn201WithSearchCriteriaWhenPostCreateCaseForCaseworker() throws Exception {
+    void shouldReturn201WithSearchCriteriaWhenPostCreateCaseForCaseworker() throws Exception {
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/"
             + CASE_TYPE_WITH_MULTIPLE_SEARCH_CRITERIA_AND_SEARCH_PARTY + "/cases";
 
@@ -1254,7 +1258,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn201WhenPostCreateCaseWithNoDataForCitizen() throws Exception {
+    void shouldReturn201WhenPostCreateCaseWithNoDataForCitizen() throws Exception {
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
 
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
@@ -1273,7 +1277,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
         final List<CaseDetails> caseDetailsList = template.query("SELECT * FROM case_data", this::mapCaseData);
         assertEquals("Incorrect number of cases", 1, caseDetailsList.size());
 
-        final CaseDetails savedCaseDetails = caseDetailsList.get(0);
+        final CaseDetails savedCaseDetails = caseDetailsList.getFirst();
         assertTrue("Incorrect Case Reference", uidService.validateUID(String.valueOf(savedCaseDetails
             .getReference())));
         assertEquals("Incorrect Case Type", CASE_TYPE, savedCaseDetails.getCaseTypeId());
@@ -1283,7 +1287,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
         final List<AuditEvent> caseAuditEventList = template.query("SELECT * FROM case_event", this::mapAuditEvent);
         assertEquals("Incorrect number of case events", 1, caseAuditEventList.size());
 
-        final AuditEvent caseAuditEvent = caseAuditEventList.get(0);
+        final AuditEvent caseAuditEvent = caseAuditEventList.getFirst();
         assertEquals("123", caseAuditEvent.getUserId());
         assertEquals(savedCaseDetails.getId(), caseAuditEvent.getCaseDataId());
         assertEquals(savedCaseDetails.getCaseTypeId(), caseAuditEvent.getCaseTypeId());
@@ -1300,7 +1304,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void saveCaseDetailsForCaseWorkerShouldLogAudit() throws Exception {
+    void saveCaseDetailsForCaseWorkerShouldLogAudit() throws Exception {
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
 
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
@@ -1316,7 +1320,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
         final List<CaseDetails> caseDetailsList = template.query("SELECT * FROM case_data", this::mapCaseData);
         assertEquals("Incorrect number of cases", 1, caseDetailsList.size());
 
-        final CaseDetails savedCaseDetails = caseDetailsList.get(0);
+        final CaseDetails savedCaseDetails = caseDetailsList.getFirst();
         assertTrue("Incorrect Case Reference", uidService.validateUID(String.valueOf(savedCaseDetails
             .getReference())));
 
@@ -1334,7 +1338,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void saveCaseDetailsForCitizenShouldLogAudit() throws Exception {
+    void saveCaseDetailsForCitizenShouldLogAudit() throws Exception {
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
 
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
@@ -1361,59 +1365,59 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn201WithEmptyBodyWhenPostCreateCaseWithNoReadAccessOnCaseTypeForCaseworker()
+    void shouldReturn201WithEmptyBodyWhenPostCreateCaseWithNoReadAccessOnCaseTypeForCaseworker()
         throws Exception {
         shouldReturn201WithEmptyBodyWhenPostCreateCaseWithNoReadAccessOnCaseType("caseworkers");
     }
 
     @Test
-    public void shouldReturn201WithEmptyBodyWhenPostCreateCaseWithNoReadAccessOnCaseTypeForCitizen() throws Exception {
+    void shouldReturn201WithEmptyBodyWhenPostCreateCaseWithNoReadAccessOnCaseTypeForCitizen() throws Exception {
         shouldReturn201WithEmptyBodyWhenPostCreateCaseWithNoReadAccessOnCaseType("citizens");
     }
 
     @Test
-    public void shouldReturn201WithFieldRemovedWhenPostCreateCaseWithNoFieldReadAccessForCaseworker()
+    void shouldReturn201WithFieldRemovedWhenPostCreateCaseWithNoFieldReadAccessForCaseworker()
         throws Exception {
         shouldReturn201WithFieldRemovedWhenPostCreateCaseWithNoFieldReadAccess("caseworkers");
     }
 
     @Test
-    public void shouldReturn201WithFieldRemovedWhenPostCreateCaseWithNoFieldReadAccessForCitizen() throws Exception {
+    void shouldReturn201WithFieldRemovedWhenPostCreateCaseWithNoFieldReadAccessForCitizen() throws Exception {
         shouldReturn201WithFieldRemovedWhenPostCreateCaseWithNoFieldReadAccess("citizens");
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccessForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccessForCaseworker() throws Exception {
         shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccess("caseworkers");
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccessForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccessForCitizen() throws Exception {
         shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccess("citizens");
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoCreateEventAccessForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoCreateEventAccessForCaseworker() throws Exception {
         shouldReturn404WhenPostCreateCaseWithNoCreateEventAccess("caseworkers");
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoCreateEventAccessForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoCreateEventAccessForCitizen() throws Exception {
         shouldReturn404WhenPostCreateCaseWithNoCreateEventAccess("citizens");
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoCreateFieldAccessForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoCreateFieldAccessForCaseworker() throws Exception {
         shouldReturn404WhenPostCreateCaseWithNoCreateFieldAccess("caseworkers");
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoCreateFieldAccessForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoCreateFieldAccessForCitizen() throws Exception {
         shouldReturn404WhenPostCreateCaseWithNoCreateFieldAccess("citizens");
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoEventForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoEventForCaseworker() throws Exception {
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
 
@@ -1432,7 +1436,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoEventForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoEventForCitizen() throws Exception {
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
 
@@ -1451,7 +1455,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoEventIdForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoEventIdForCaseworker() throws Exception {
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
         caseDetailsToSave.setEvent(anEvent().build());
@@ -1471,7 +1475,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoEventIdForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoEventIdForCitizen() throws Exception {
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
         caseDetailsToSave.setEvent(anEvent().build());
@@ -1491,7 +1495,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn422WhenPostCreateCaseWithInvalidPreStatesForCaseworker() throws Exception {
+    void shouldReturn422WhenPostCreateCaseWithInvalidPreStatesForCaseworker() throws Exception {
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
         caseDetailsToSave.setEvent(anEvent().build());
@@ -1512,7 +1516,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn422WhenPostCreateCaseWithInvalidPreStatesForCitizen() throws Exception {
+    void shouldReturn422WhenPostCreateCaseWithInvalidPreStatesForCitizen() throws Exception {
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
         caseDetailsToSave.setEvent(anEvent().build());
@@ -1533,7 +1537,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithUnknownEventForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithUnknownEventForCaseworker() throws Exception {
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
         caseDetailsToSave.setEvent(anEvent().build());
@@ -1554,7 +1558,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithUnknownEventForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithUnknownEventForCitizen() throws Exception {
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases";
         final CaseDataContent caseDetailsToSave = newCaseDataContent().build();
         caseDetailsToSave.setEvent(anEvent().build());
@@ -1576,19 +1580,19 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenGetCaseWithNoCaseTypeReadAccessForCaseworker() throws Exception {
+    void shouldReturn404WhenGetCaseWithNoCaseTypeReadAccessForCaseworker() throws Exception {
         shouldReturn404WhenGetCaseWithNoCaseTypeReadAccess("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenGetCaseWithNoCaseTypeReadAccessForCitizen() throws Exception {
+    void shouldReturn404WhenGetCaseWithNoCaseTypeReadAccessForCitizen() throws Exception {
         shouldReturn404WhenGetCaseWithNoCaseTypeReadAccess("citizens");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WhenGetValidCaseForCaseworker() throws Exception {
+    void shouldReturn200WhenGetValidCaseForCaseworker() throws Exception {
 
         // Check that we have the expected test data set size, this is to ensure that state filtering is correct
         assertCaseDataResultSetSize();
@@ -1684,7 +1688,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void findCaseDetailsForCaseworkerShouldLogAudit() throws Exception {
+    void findCaseDetailsForCaseworkerShouldLogAudit() throws Exception {
         final MvcResult result = mockMvc
             .perform(get("/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
                 + "/cases/1504259907353529")
@@ -1710,7 +1714,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_private_cases.sql"})
-    public void shouldReturn404WhenGetCaseClassificationTooHighForCaseworker() throws Exception {
+    void shouldReturn404WhenGetCaseClassificationTooHighForCaseworker() throws Exception {
 
         mockMvc
             .perform(
@@ -1724,7 +1728,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WhenGetValidCaseForCitizen() throws Exception {
+    void shouldReturn200WhenGetValidCaseForCitizen() throws Exception {
         // Check that we have the expected test data set size, this is to ensure that state filtering is correct
         assertCaseDataResultSetSize();
 
@@ -1812,7 +1816,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void findCaseDetailsForCitizenShouldLogAudit() throws Exception {
+    void findCaseDetailsForCitizenShouldLogAudit() throws Exception {
 
         final MvcResult result = mockMvc
             .perform(get("/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
@@ -1840,19 +1844,19 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WithFieldRemovedWhenGetValidCaseWithNoFieldReadAccessForCaseworker() throws Exception {
+    void shouldReturn200WithFieldRemovedWhenGetValidCaseWithNoFieldReadAccessForCaseworker() throws Exception {
         shouldReturn200WithFieldRemovedWhenGetValidCaseWithNoFieldReadAccess("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WithFieldRemovedWhenGetValidCaseWithNoFieldReadAccessForCitizen() throws Exception {
+    void shouldReturn200WithFieldRemovedWhenGetValidCaseWithNoFieldReadAccessForCitizen() throws Exception {
         shouldReturn200WithFieldRemovedWhenGetValidCaseWithNoFieldReadAccess("citizens");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn400WhenGetValidCaseWithInvalidCaseReferenceForCaseworker() throws Exception {
+    void shouldReturn400WhenGetValidCaseWithInvalidCaseReferenceForCaseworker() throws Exception {
         // Check that we have the expected test data set size, this is to ensure that state filtering is correct
         assertCaseDataResultSetSize();
 
@@ -1870,51 +1874,51 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn403ForRestrictedCaseTypeWithRA_JudiciaryForCaseworker() throws Exception {
+    void shouldReturn403ForRestrictedCaseTypeWithRA_JudiciaryForCaseworker() throws Exception {
         shouldReturn403ForRestrictedCaseType("caseworkers", "hmcts-judiciary");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn403ForRestrictedCaseTypeWithRA_LegalOperationsForCaseworker() throws Exception {
+    void shouldReturn403ForRestrictedCaseTypeWithRA_LegalOperationsForCaseworker() throws Exception {
         shouldReturn403ForRestrictedCaseType("caseworkers", "hmcts-legal-operations"
         );
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404ForRestrictedCaseTypeWithRA_CreatorForCaseworker() throws Exception {
+    void shouldReturn404ForRestrictedCaseTypeWithRA_CreatorForCaseworker() throws Exception {
         shouldReturn404ForRestrictedCaseType("caseworkers", "[CREATOR]", GrantType.BASIC);
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404ForRestrictedCaseTypeWithGrantTypeNotBasicForCaseworker() throws Exception {
+    void shouldReturn404ForRestrictedCaseTypeWithGrantTypeNotBasicForCaseworker() throws Exception {
         shouldReturn404ForRestrictedCaseType("caseworkers", "hmcts-judiciary", GrantType.STANDARD);
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn403ForRestrictedCaseTypeWithRA_JudiciaryForCitizen() throws Exception {
+    void shouldReturn403ForRestrictedCaseTypeWithRA_JudiciaryForCitizen() throws Exception {
         shouldReturn403ForRestrictedCaseType("citizens", "hmcts-judiciary");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn403ForRestrictedCaseTypeWithRA_LegalOperationsForCitizen() throws Exception {
+    void shouldReturn403ForRestrictedCaseTypeWithRA_LegalOperationsForCitizen() throws Exception {
         shouldReturn403ForRestrictedCaseType("citizens", "hmcts-legal-operations"
         );
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404ForRestrictedCaseTypeWithRA_CreatorForCitizen() throws Exception {
+    void shouldReturn404ForRestrictedCaseTypeWithRA_CreatorForCitizen() throws Exception {
         shouldReturn404ForRestrictedCaseType("citizens", "[CREATOR]", GrantType.BASIC);
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404ForRestrictedCaseTypeWithGrantTypeNotBasicForCitizen() throws Exception {
+    void shouldReturn404ForRestrictedCaseTypeWithGrantTypeNotBasicForCitizen() throws Exception {
         shouldReturn404ForRestrictedCaseType("citizens", "hmcts-judiciary", GrantType.STANDARD);
     }
 
@@ -1950,7 +1954,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn400WhenGetValidCaseWithInvalidCaseReferenceForCitizen() throws Exception {
+    void shouldReturn400WhenGetValidCaseWithInvalidCaseReferenceForCitizen() throws Exception {
         // Check that we have the expected test data set size, this is to ensure that state filtering is correct
         assertCaseDataResultSetSize();
 
@@ -1968,7 +1972,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenGetCaseWithNonExistentCaseReferenceForCaseworker() throws Exception {
+    void shouldReturn404WhenGetCaseWithNonExistentCaseReferenceForCaseworker() throws Exception {
         // Check that we have the expected test data set size, this is to ensure that state filtering is correct
         assertCaseDataResultSetSize();
 
@@ -1981,7 +1985,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenGetCaseWithNonExistentCaseReferenceForCitizen() throws Exception {
+    void shouldReturn404WhenGetCaseWithNonExistentCaseReferenceForCitizen() throws Exception {
         // Check that we have the expected test data set size, this is to ensure that state filtering is correct
         assertCaseDataResultSetSize();
 
@@ -1994,7 +1998,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithNoDataForCaseworker() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithNoDataForCaseworker() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/caseworkers/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases/" + caseReference + "/events";
@@ -2080,7 +2084,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases_global_search.sql"})
-    public void shouldReturn201WithSearchCriteriaWhenPostCreateCaseEventCaseworker() throws Exception {
+    void shouldReturn201WithSearchCriteriaWhenPostCreateCaseEventCaseworker() throws Exception {
         final String caseReference = "1504259907353529";
         final String URL = "/caseworkers/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases/" + caseReference + "/events";
@@ -2105,7 +2109,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithNoDataForCitizen() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithNoDataForCitizen() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/citizens/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases/" + caseReference + "/events";
@@ -2190,7 +2194,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases_global_search.sql"})
-    public void shouldReturn201WithSearchCriteriaWhenPostCreateCaseEventForCitizen() throws Exception {
+    void shouldReturn201WithSearchCriteriaWhenPostCreateCaseEventForCitizen() throws Exception {
         final String caseReference = "1504259907353529";
         final String URL = "/citizens/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/"
             + CASE_TYPE_WITH_MULTIPLE_SEARCH_CRITERIA_AND_SEARCH_PARTY
@@ -2219,7 +2223,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldUpdateLastStateModifiedTimeWhenAnEventTriggeredStateTransition() throws Exception {
+    void shouldUpdateLastStateModifiedTimeWhenAnEventTriggeredStateTransition() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/citizens/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases/" + caseReference + "/events";
@@ -2249,7 +2253,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldNotUpdateLastStateModifiedTimeWhenAnEventNotTriggeredStateTransition() throws Exception {
+    void shouldNotUpdateLastStateModifiedTimeWhenAnEventNotTriggeredStateTransition() throws Exception {
 
         final String caseTypeUrlPortion = "bookcase-default-post-state";
         final String caseReference = "1557845948403939";
@@ -2281,32 +2285,32 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithExistingDocumentBinaryForCaseworker() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithExistingDocumentBinaryForCaseworker() throws Exception {
         shouldReturn201WhenPostCreateCaseEventWithExistingDocumentBinary("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithExistingDocumentBinaryForCitizen() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithExistingDocumentBinaryForCitizen() throws Exception {
         shouldReturn201WhenPostCreateCaseEventWithExistingDocumentBinary("citizens");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithValidDataForCaseworker() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithValidDataForCaseworker() throws Exception {
         shouldReturn201WhenPostCreateCaseEventWithValidData("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithValidDataForCitizen() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithValidDataForCitizen() throws Exception {
         shouldReturn201WhenPostCreateCaseEventWithValidData("citizens");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithNoPreStateCheckForCaseworker() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithNoPreStateCheckForCaseworker() throws Exception {
         final String urlPortionForCaseType = "bookcase-default-pre-state-test";
         final String caseReference = "1557850043804031";
         final String url = "/caseworkers/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/"
@@ -2379,7 +2383,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithNoPreStateCheckForCitizen() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithNoPreStateCheckForCitizen() throws Exception {
         final String urlPortionForCaseType = "bookcase-default-pre-state-test";
         final String caseReference = "1557850043804031";
         final String url = "/citizens/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/"
@@ -2449,7 +2453,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithNoChangesToPostStateForCaseworker() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithNoChangesToPostStateForCaseworker() throws Exception {
         final String caseTypeUrlPortion = "bookcase-default-post-state";
         final String caseReference = "1557845948403939";
         final String url = "/caseworkers/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/"
@@ -2519,7 +2523,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithNoChangesToPostStateForCitizen() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithNoChangesToPostStateForCitizen() throws Exception {
         final String caseTypeUrlPortion = "bookcase-default-post-state";
         final String caseReference = "1557845948403939";
         final String url = "/citizens/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + caseTypeUrlPortion
@@ -2590,7 +2594,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WithEmptyBodyWhenPostCreateCaseEventWithNoCaseTypeReadAccessForCaseworker()
+    void shouldReturn201WithEmptyBodyWhenPostCreateCaseEventWithNoCaseTypeReadAccessForCaseworker()
         throws Exception {
         shouldReturn201WithEmptyBodyWhenPostCreateCaseEventWithNoCaseTypeReadAccess("caseworkers");
     }
@@ -2598,7 +2602,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WithEmptyBodyWhenPostCreateCaseEventWithNoCaseTypeReadAccessForCitizen()
+    void shouldReturn201WithEmptyBodyWhenPostCreateCaseEventWithNoCaseTypeReadAccessForCitizen()
         throws Exception {
         shouldReturn201WithEmptyBodyWhenPostCreateCaseEventWithNoCaseTypeReadAccess("citizens");
     }
@@ -2606,7 +2610,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WithFieldRemovedWhenPostCreateCaseEventWithNoFieldReadAccessForCaseworker()
+    void shouldReturn201WithFieldRemovedWhenPostCreateCaseEventWithNoFieldReadAccessForCaseworker()
         throws Exception {
         shouldReturn201WithFieldRemovedWhenPostCreateCaseEventWithNoFieldReadAccess("caseworkers");
     }
@@ -2614,7 +2618,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WithFieldRemovedWhenPostCreateCaseEventWithNoFieldReadAccessForCitizen()
+    void shouldReturn201WithFieldRemovedWhenPostCreateCaseEventWithNoFieldReadAccessForCitizen()
         throws Exception {
         shouldReturn201WithFieldRemovedWhenPostCreateCaseEventWithNoFieldReadAccess("citizens");
     }
@@ -2622,62 +2626,62 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoUpdateCaseAccessForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoUpdateCaseAccessForCaseworker() throws Exception {
         shouldReturn404WhenPostCreateCaseEventWithNoUpdateCaseAccess("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoUpdateCaseAccessForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoUpdateCaseAccessForCitizen() throws Exception {
         shouldReturn404WhenPostCreateCaseEventWithNoUpdateCaseAccess("citizens");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoCreateEventAccessForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoCreateEventAccessForCaseworker() throws Exception {
         shouldReturn404WhenPostCreateCaseEventWithNoCreateEventAccess("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoCreateEventAccessForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoCreateEventAccessForCitizen() throws Exception {
         shouldReturn404WhenPostCreateCaseEventWithNoCreateEventAccess("citizens");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoCreateFieldAccessForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoCreateFieldAccessForCaseworker() throws Exception {
         shouldReturn404WhenPostCreateCaseEventWithNoCreateFieldAccess("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoCreateFieldAccessForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoCreateFieldAccessForCitizen() throws Exception {
         shouldReturn404WhenPostCreateCaseEventWithNoCreateFieldAccess("citizens");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoUpdateFieldAccessForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoUpdateFieldAccessForCaseworker() throws Exception {
         shouldReturn404WhenPostCreateCaseEventWithNoUpdateFieldAccess("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoUpdateFieldAccessForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoUpdateFieldAccessForCitizen() throws Exception {
         shouldReturn404WhenPostCreateCaseEventWithNoUpdateFieldAccess("citizens");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithNoSummaryForCaseWorker() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithNoSummaryForCaseWorker() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/caseworkers/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases/" + caseReference + "/events";
@@ -2713,7 +2717,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithNoSummaryForCitizen() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithNoSummaryForCitizen() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/citizens/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases/" + caseReference + "/events";
@@ -2749,7 +2753,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithBlankSummaryForCaseWorker() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithBlankSummaryForCaseWorker() throws Exception {
         final String caseReference = "1504259907353545";
         final String summary = "        ";
         final String URL = "/caseworkers/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
@@ -2796,7 +2800,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201WhenPostCreateCaseEventWithBlankSummaryForCitizen() throws Exception {
+    void shouldReturn201WhenPostCreateCaseEventWithBlankSummaryForCitizen() throws Exception {
         final String caseReference = "1504259907353545";
         final String summary = "        ";
         final String URL = "/citizens/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
@@ -2842,7 +2846,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn422WhenPostCreateCaseEventWithSummaryTooLongForCaseWorker() throws Exception {
+    void shouldReturn422WhenPostCreateCaseEventWithSummaryTooLongForCaseWorker() throws Exception {
         final String caseReference = "1504259907353545";
         final String summary = new String(new char[1025]).replace("\0", "-");
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
@@ -2879,7 +2883,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn422WhenPostCreateCaseEventWithSummaryTooLongForCitizen() throws Exception {
+    void shouldReturn422WhenPostCreateCaseEventWithSummaryTooLongForCitizen() throws Exception {
         final String caseReference = "1504259907353545";
         final String summary = new String(new char[1025]).replace("\0", "-");
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
@@ -2916,7 +2920,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn422WhenPostCreateCaseEventWithDescriptionTooLongForCaseWorker() throws Exception {
+    void shouldReturn422WhenPostCreateCaseEventWithDescriptionTooLongForCaseWorker() throws Exception {
         final String caseReference = "1504259907353545";
         final String description = new String(new char[65666]).replace("\0", "-");
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
@@ -2953,7 +2957,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn422WhenPostCreateCaseEventWithDescriptionTooLongForCitizen() throws Exception {
+    void shouldReturn422WhenPostCreateCaseEventWithDescriptionTooLongForCitizen() throws Exception {
         final String caseReference = "1504259907353545";
         final String description = new String(new char[65666]).replace("\0", "-");
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
@@ -2990,7 +2994,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoEventIdForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoEventIdForCaseworker() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
             + caseReference + "/events";
@@ -3026,7 +3030,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoEventIdForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoEventIdForCitizen() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
             + caseReference + "/events";
@@ -3062,7 +3066,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoEventForCaseWorker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoEventForCaseWorker() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
             + caseReference + "/events";
@@ -3096,7 +3100,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNoEventForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNoEventForCitizen() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
             + caseReference + "/events";
@@ -3130,7 +3134,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNonExistentCaseIdForCaseWorker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNonExistentCaseIdForCaseWorker() throws Exception {
         final String caseReference = "9999999999999995";
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
             + caseReference + "/events";
@@ -3155,7 +3159,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithNonExistentCaseIdForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithNonExistentCaseIdForCitizen() throws Exception {
         final String caseReference = "9999999999999995";
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
             + caseReference + "/events";
@@ -3180,7 +3184,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn400WhenPostCreateCaseEventWithInvalidCaseIdForCaseWorker() throws Exception {
+    void shouldReturn400WhenPostCreateCaseEventWithInvalidCaseIdForCaseWorker() throws Exception {
         final String caseReference = "invalidReference";
         final String hasPreStatesEvent = "HAS_PRE_STATES_EVENT";
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
@@ -3206,7 +3210,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn400WhenPostCreateCaseEventWithInvalidCaseIdForCitizen() throws Exception {
+    void shouldReturn400WhenPostCreateCaseEventWithInvalidCaseIdForCitizen() throws Exception {
         final String caseReference = "invalidReference";
         final String hasPreStatesEvent = "HAS_PRE_STATES_EVENT";
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
@@ -3232,7 +3236,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithUnknownFieldsForCaseWorker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithUnknownFieldsForCaseWorker() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
             + caseReference + "/events";
@@ -3283,7 +3287,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn404WhenPostCreateCaseEventWithUnknownFieldsForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseEventWithUnknownFieldsForCitizen() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE + "/cases/"
             + caseReference + "/events";
@@ -3334,7 +3338,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn409WhenPostCreateCaseEventWithCaseVersionConflictForCaseWorker() throws Exception {
+    void shouldReturn409WhenPostCreateCaseEventWithCaseVersionConflictForCaseWorker() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/caseworkers/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases/" + caseReference + "/events";
@@ -3362,7 +3366,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn409WhenPostCreateCaseEventWithCaseVersionConflictForCitizen() throws Exception {
+    void shouldReturn409WhenPostCreateCaseEventWithCaseVersionConflictForCitizen() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/citizens/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases/" + caseReference + "/events";
@@ -3390,7 +3394,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn422WhenPostCreateCaseEventWithCaseStateConflictForCaseWorker() throws Exception {
+    void shouldReturn422WhenPostCreateCaseEventWithCaseStateConflictForCaseWorker() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/caseworkers/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases/" + caseReference + "/events";
@@ -3419,7 +3423,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn422WhenPostCreateCaseEventWithCaseStateConflictForCitizen() throws Exception {
+    void shouldReturn422WhenPostCreateCaseEventWithCaseStateConflictForCitizen() throws Exception {
         final String caseReference = "1504259907353545";
         final String URL = "/citizens/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE
             + "/cases/" + caseReference + "/events";
@@ -3448,56 +3452,56 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WithNoCaseDataWhenGetTokenForStartCaseWithNoCaseTypeReadAccessForCaseworker()
+    void shouldReturn200WithNoCaseDataWhenGetTokenForStartCaseWithNoCaseTypeReadAccessForCaseworker()
         throws Exception {
         shouldReturn200WithNoCaseDataWhenGetTokenForStartCaseWithNoCaseTypeReadAccess("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WithNoCaseDataWhenGetTokenForStartCaseWithNoCaseTypeReadAccessForCitizen()
+    void shouldReturn200WithNoCaseDataWhenGetTokenForStartCaseWithNoCaseTypeReadAccessForCitizen()
         throws Exception {
         shouldReturn200WithNoCaseDataWhenGetTokenForStartCaseWithNoCaseTypeReadAccess("citizens");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WithNoCaseDataWhenGetTokenForStartEventWithNoCaseTypeReadAccessForCaseworker()
+    void shouldReturn200WithNoCaseDataWhenGetTokenForStartEventWithNoCaseTypeReadAccessForCaseworker()
         throws Exception {
         shouldReturn200WithNoCaseDataWhenGetTokenForStartEventWithNoCaseTypeReadAccess("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WithNoCaseDataWhenGetTokenForStartEventWithNoCaseTypeReadAccessForCitizen()
+    void shouldReturn200WithNoCaseDataWhenGetTokenForStartEventWithNoCaseTypeReadAccessForCitizen()
         throws Exception {
         shouldReturn200WithNoCaseDataWhenGetTokenForStartEventWithNoCaseTypeReadAccess("citizens");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WithFieldRemovedWhenGetTokenForStartEventWithNoCaseTypeReadAccessForCaseworker()
+    void shouldReturn200WithFieldRemovedWhenGetTokenForStartEventWithNoCaseTypeReadAccessForCaseworker()
         throws Exception {
         shouldReturn200WithFieldRemovedWhenGetTokenForStartEventWithNoCaseTypeReadAccess("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WithFieldRemovedWhenGetTokenForStartEventWithNoCaseTypeReadAccessForCitizen()
+    void shouldReturn200WithFieldRemovedWhenGetTokenForStartEventWithNoCaseTypeReadAccessForCitizen()
         throws Exception {
         shouldReturn200WithFieldRemovedWhenGetTokenForStartEventWithNoCaseTypeReadAccess("citizens");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WithCaseDataWithTTLWhenGetTokenForStartEventForCaseworker()
+    void shouldReturn200WithCaseDataWithTTLWhenGetTokenForStartEventForCaseworker()
         throws Exception {
         shouldReturn200WithCaseDataWithTLLWhenGetTokenForStartEvent("caseworkers");
     }
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WithCaseDataWithTTLWhenGetTokenForStartEventForCitizen()
+    void shouldReturn200WithCaseDataWithTTLWhenGetTokenForStartEventForCitizen()
         throws Exception {
         shouldReturn200WithCaseDataWithTLLWhenGetTokenForStartEvent("citizens");
     }
@@ -3630,6 +3634,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
         JsonNode dataClassification = mapper.readTree(mvcResult.getResponse().getContentAsString())
             .get("data_classification");
         Map<Object,Object> actualData = mapper.readValue(caseData.toString(), Map.class);
+
         assertAll(() ->
             assertTrue("Incorrect Response Content", expectedSanitizedData.entrySet()
                 .containsAll(actualData.entrySet())),
@@ -3906,7 +3911,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201AndInsertCaseLinksWhenCreateCaseEvent()
+    void shouldReturn201AndInsertCaseLinksWhenCreateCaseEvent()
         throws Exception {
         final String reference = CASE_22_REFERENCE;
         final String URL = "/caseworkers/0/jurisdictions/"
@@ -3970,7 +3975,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn201AndDeleteCaseLinksWhenCreateCaseEvent()
+    void shouldReturn201AndDeleteCaseLinksWhenCreateCaseEvent()
         throws Exception {
         final String reference = CASE_22_REFERENCE;
         final String URL = "/caseworkers/0/jurisdictions/"
@@ -4026,7 +4031,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldErrorIfTriggerStartForCaseDetectsAboutToCallStartCallbackHasModifiedTTL() throws Exception {
+    void shouldErrorIfTriggerStartForCaseDetectsAboutToCallStartCallbackHasModifiedTTL() throws Exception {
         final String reference = "9816494993793181";
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" +
             CASE_TYPE_TTL + "/cases/" + reference + "/event-triggers/" + TEST_EVENT_ID + "/token";
@@ -4056,7 +4061,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WhenTriggerStartForCaseDetectsAboutToCallStartCallbackHasNotModifiedTTL()
+    void shouldReturn200WhenTriggerStartForCaseDetectsAboutToCallStartCallbackHasNotModifiedTTL()
         throws Exception {
 
         final ObjectMapper objectMapper = new JacksonObjectMapperConfig().defaultObjectMapper();
@@ -4389,7 +4394,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WhenPostValidateCaseDetailsWithValidDataForCaseworker() throws Exception {
+    void shouldReturn200WhenPostValidateCaseDetailsWithValidDataForCaseworker() throws Exception {
         final String caseReference = "1504259907353545";
         final JsonNode DATA = mapper.readTree(exampleData());
 
@@ -4420,7 +4425,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturnWhenPostValidateCaseDetailsWithValidDataForCaseworker() throws Exception {
+    void shouldReturnWhenPostValidateCaseDetailsWithValidDataForCaseworker() throws Exception {
         final String caseReference = "1504259907353545";
         final JsonNode DATA = mapper.readTree(exampleData());
 
@@ -4451,7 +4456,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn422WhenPostValidateCaseDetailsWithInvalidDataForCaseworker() throws Exception {
+    void shouldReturn422WhenPostValidateCaseDetailsWithInvalidDataForCaseworker() throws Exception {
         final JsonNode DATA = mapper.readTree(exampleDataWithInvalidPostcode());
         final CaseDataContent caseDetailsToValidate = newCaseDataContent()
             .withEvent(anEvent()
@@ -4482,7 +4487,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200WhenPostValidateCaseDetailsWithValidDataForCitizen() throws Exception {
+    void shouldReturn200WhenPostValidateCaseDetailsWithValidDataForCitizen() throws Exception {
         final String caseReference = "1504259907353545";
         final JsonNode DATA = mapper.readTree(exampleData());
 
@@ -4512,7 +4517,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn422WhenPostValidateCaseDetailsWithInvalidDataForCitizen() throws Exception {
+    void shouldReturn422WhenPostValidateCaseDetailsWithInvalidDataForCitizen() throws Exception {
         final JsonNode DATA = mapper.readTree(exampleDataWithInvalidPostcode());
 
         final CaseDataContent caseDetailsToValidate = newCaseDataContent()
@@ -4545,7 +4550,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200_whenSearchAsSolicitor() throws Exception {
+    void shouldReturn200_whenSearchAsSolicitor() throws Exception {
 
         assertCaseDataResultSetSize();
 
@@ -4580,7 +4585,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200_whenSearchWithParamsAsCaseWorker() throws Exception {
+    void shouldReturn200_whenSearchWithParamsAsCaseWorker() throws Exception {
 
         assertCaseDataResultSetSize();
 
@@ -4609,7 +4614,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldSearchCaseDetailsByReference() throws Exception {
+    void shouldSearchCaseDetailsByReference() throws Exception {
 
         assertCaseDataResultSetSize();
 
@@ -4666,7 +4671,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldSearchCaseDetailsBySecurityClassification() throws Exception {
+    void shouldSearchCaseDetailsBySecurityClassification() throws Exception {
 
         assertCaseDataResultSetSize();
 
@@ -4742,7 +4747,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldSearchCaseDetailsByCreationDate() throws Exception {
+    void shouldSearchCaseDetailsByCreationDate() throws Exception {
 
         assertCaseDataResultSetSize();
 
@@ -4819,7 +4824,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldSearchCaseDetailsByLastModified() throws Exception {
+    void shouldSearchCaseDetailsByLastModified() throws Exception {
 
         MockUtils.setSecurityAuthorities(authentication, MockUtils.ROLE_CASEWORKER_PRIVATE);
 
@@ -4877,7 +4882,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = { "classpath:sql/insert_cases.sql" })
-    public void shouldAuditLogCaseWorkerSearch() throws Exception {
+    void shouldAuditLogCaseWorkerSearch() throws Exception {
 
         MockUtils.setSecurityAuthorities(authentication, MockUtils.ROLE_CASEWORKER_PRIVATE);
 
@@ -4907,7 +4912,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = { "classpath:sql/insert_cases.sql" })
-    public void shouldAuditLogCitizenSearch() throws Exception {
+    void shouldAuditLogCitizenSearch() throws Exception {
 
         MockUtils.setSecurityAuthorities(authentication, MockUtils.ROLE_CASEWORKER_PRIVATE);
 
@@ -4938,7 +4943,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturnEmptyResult_whenSearchWithNonMatchingCriteriaAsCaseWorker() throws Exception {
+    void shouldReturnEmptyResult_whenSearchWithNonMatchingCriteriaAsCaseWorker() throws Exception {
 
         assertCaseDataResultSetSize();
 
@@ -4957,7 +4962,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturnPaginatedResults() throws Exception {
+    void shouldReturnPaginatedResults() throws Exception {
 
         assertCaseDataResultSetSize();
         MockUtils.setSecurityAuthorities(authentication, MockUtils.ROLE_CASEWORKER_PRIVATE);
@@ -5022,7 +5027,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturnPaginatedSearchMetadata() throws Exception {
+    void shouldReturnPaginatedSearchMetadata() throws Exception {
 
         assertCaseDataResultSetSize();
         MockUtils.setSecurityAuthorities(authentication, MockUtils.ROLE_CASEWORKER_PRIVATE);
@@ -5087,7 +5092,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturnPaginatedSearchMetadataForCitizen() throws Exception {
+    void shouldReturnPaginatedSearchMetadataForCitizen() throws Exception {
         assertCaseDataResultSetSize();
         MockUtils.setSecurityAuthorities(authentication, "role-citizen");
 
@@ -5106,7 +5111,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturnEmptyPaginatedSearchMetadataForCitizenWithUnassignedRole() throws Exception {
+    void shouldReturnEmptyPaginatedSearchMetadataForCitizenWithUnassignedRole() throws Exception {
         assertCaseDataResultSetSize();
         MockUtils.setSecurityAuthorities(authentication, "unassigned-role-citizen");
 
@@ -5127,7 +5132,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn400_whenSearchWithBadRequestParamAsCaseWorker() throws Exception {
+    void shouldReturn400_whenSearchWithBadRequestParamAsCaseWorker() throws Exception {
 
         assertCaseDataResultSetSize();
 
@@ -5140,7 +5145,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldReturn200_whenSearchParamsAreSanitizedAsCaseWorker() throws Exception {
+    void shouldReturn200_whenSearchParamsAreSanitizedAsCaseWorker() throws Exception {
 
         assertCaseDataResultSetSize();
 
@@ -5161,7 +5166,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn201WhenPostCreateCaseWithCreatorRoleWithNoDataForCaseworker() throws Exception {
+    void shouldReturn201WhenPostCreateCaseWithCreatorRoleWithNoDataForCaseworker() throws Exception {
         final String URL = "/caseworkers/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE_CREATOR_ROLE
             + "/cases";
 
@@ -5211,7 +5216,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn201WhenPostCreateCaseWithCreatorRoleWithNoDataForCitizen() throws Exception {
+    void shouldReturn201WhenPostCreateCaseWithCreatorRoleWithNoDataForCitizen() throws Exception {
         final String URL = "/citizens/0/jurisdictions/" + JURISDICTION + "/case-types/" + CASE_TYPE_CREATOR_ROLE
             + "/cases";
 
@@ -5261,13 +5266,13 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccessOnCreatorRoleForCaseworker() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccessOnCreatorRoleForCaseworker() throws Exception {
         shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccess("caseworkers",
             CASE_TYPE_CREATOR_ROLE_NO_CREATE_ACCESS);
     }
 
     @Test
-    public void shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccessOnCreatorRoleForCitizen() throws Exception {
+    void shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccessOnCreatorRoleForCitizen() throws Exception {
         shouldReturn404WhenPostCreateCaseWithNoCreateCaseAccess("citizens",
             CASE_TYPE_CREATOR_ROLE_NO_CREATE_ACCESS);
     }
@@ -5322,8 +5327,9 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
+
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldFilterCaseDataWhoseOrderGreaterThanPassedPageId() throws Exception {
+    void shouldFilterCaseDataWhoseOrderGreaterThanPassedPageId() throws Exception {
         final String caseReference = "1504259907353545";
 
         final JsonNode data = mapper.readTree(exampleCaseData());
@@ -5366,7 +5372,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     }
 
     @Test
-    public void shouldReturn400WhenPostValidateCaseDetailsMidEventCallbackChangesDataForCaseworker() throws Exception {
+    void shouldReturn400WhenPostValidateCaseDetailsMidEventCallbackChangesDataForCaseworker() throws Exception {
 
         final JsonNode data = mapper.readTree(exampleCaseData());
         final JsonNode eventData = mapper.readTree(exampleEventDataTTL());
@@ -5420,7 +5426,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldFilterRestoreCaseDataWhoseOrderGreaterThanPassedPageIdMultiplePreviousPages() throws Exception {
+    void shouldFilterRestoreCaseDataWhoseOrderGreaterThanPassedPageIdMultiplePreviousPages() throws Exception {
         final String caseReference = "1504259907353529";
         final JsonNode data = mapper.readTree(secondPageData());
         final JsonNode eventData = mapper.readTree(exampleEventDataFieldRestore());
@@ -5528,7 +5534,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
 
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD, scripts = {"classpath:sql/insert_cases.sql"})
-    public void shouldFilterCaseDataWhoseOrderGreaterThanPassedPageIdMultiplePreviousPages() throws Exception {
+    void shouldFilterCaseDataWhoseOrderGreaterThanPassedPageIdMultiplePreviousPages() throws Exception {
         final String caseReference = "1504259907353529";
         final JsonNode data = mapper.readTree(secondPageData());
         final JsonNode eventData = mapper.readTree(exampleEventDataMultiPages());
@@ -5584,7 +5590,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases_case_links.sql"})
-    public void shouldReturn201WithCaseLinksInsertedInDbWhenPostCreateCaseEventWithValidDataForCaseworker()
+    void shouldReturn201WithCaseLinksInsertedInDbWhenPostCreateCaseEventWithValidDataForCaseworker()
         throws Exception {
 
         shouldReturn201WithCaseLinksInsertedInDbWhenPostCreateCaseEventWithValidData("caseworkers");
@@ -5593,7 +5599,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases_case_links.sql"})
-    public void shouldReturn201WithCaseLinksInsertedInDbWhenPostCreateCaseEventWithValidDataForCitizen()
+    void shouldReturn201WithCaseLinksInsertedInDbWhenPostCreateCaseEventWithValidDataForCitizen()
         throws Exception {
 
         shouldReturn201WithCaseLinksInsertedInDbWhenPostCreateCaseEventWithValidData("citizens");
@@ -5656,7 +5662,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases_case_links.sql"})
-    public void shouldReturn422BadRequestWhenCaseLinksSpecifiedDoesNotExist()
+    void shouldReturn422BadRequestWhenCaseLinksSpecifiedDoesNotExist()
         throws Exception {
         final String url = "/caseworkers/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/"
             + CASE_TYPE_CASELINK + "/cases";
@@ -5703,7 +5709,7 @@ public class CaseDetailsEndpointIT extends WireMockBaseTest {
     @Test
     @Sql(executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD,
         scripts = {"classpath:sql/insert_cases_case_links.sql"})
-    public void shouldReturn201CaseCreatedButNotInsertCaseLinkInDBWhenCaseLinkIsBLank()
+    void shouldReturn201CaseCreatedButNotInsertCaseLinkInDBWhenCaseLinkIsBLank()
         throws Exception {
         final String url = "/caseworkers/" + UID + "/jurisdictions/" + JURISDICTION + "/case-types/"
             + CASE_TYPE_CASELINK + "/cases";
